Fixed gap between img and div by adding display:block; to the image

--- a/styles.css
+++ b/styles.css
@@ -92,12 +92,12 @@ button > img {
 @media all and (min-device-width: 600px) {
   .card {
     flex-direction: row;
-    width: 1000px;
+    width: 700px;
   }
 
-  .card img {
+  .card-image img {
     max-width: 100%;
-    max-height: 100%;
     border-radius: 12px 0px 0px 12px;
+    display: block;
   }
 }
